Contrast fix for links

--- a/css/index.css
+++ b/css/index.css
@@ -187,7 +187,7 @@ body {
 }
 
 a {
-  color: #1db954;
+  color: #014713;
   font-weight: bold;
   text-decoration: none;
 }
